--- a/conversionessemana4/public/index.html
+++ b/conversionessemana4/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
@@ -14,4 +17,16 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Eduardo Álvarez &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Cristobal Torres &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Juan Villatoro &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mauricio Montiel &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Jaquelin Ávila</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2021 Programación Computacional IV</p>
+    </footer>
+  </div>
 </html>
