Actualización de la tarea

--- a/Tarea/conversionessemana4/public/index.html
+++ b/Tarea/conversionessemana4/public/index.html
@@ -17,4 +17,16 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Eduardo Álvarez &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Cristobal Torres &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Juan Villatoro &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mauricio Montiel &</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Jaquelin Ávila</a></li>
+      </ul>
+      <p class="text-center text-muted">&copy; 2021 Programación Computacional IV</p>
+    </footer>
+  </div>
 </html>
